Fixed the Onchange event, so it fires at the correct time. Bug 62753 r=pollmann sr=attinasi